Acrescentar caixa4 css. Projeto do Carlos Junior

--- a/Estilos/Estilo-do-site.css
+++ b/Estilos/Estilo-do-site.css
@@ -64,6 +64,12 @@ h2,h3{
 	height: 530px;
 	}
 	
+.caixa4{
+	width: 60%;
+	border: 3px solid #F0F8FF;	
+	margin: 0% 20% 0% 20%;
+	}
+		
 p#texto{
 	font-family: "comic sans ms";
 	font-size: 14px;
